# go2-control-stack

./: .gitignore  .gitmodules  Dockerfile  README.md
docs/: status_codes.md
models/MJCF/go2/: go2.xml
ros2_ws/src/arm_controller/: package.xml  setup.py
ros2_ws/src/arm_controller/arm_controller/: arm_feedback_parser.py
ros2_ws/src/arm_controller/test/: test_d1_ik_paths.py
ros2_ws/src/core/arm_controller/: package.xml  setup.py
ros2_ws/src/core/arm_controller/arm_controller/: __init__.py  arm_feedback_parser.py  d1_ik.py  d1_ik_node.py  d1_ik_solver.py
ros2_ws/src/core/estimator_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/core/estimator_bridge/estimator_bridge/: qdq_est_bridge.py
ros2_ws/src/core/estimator_bridge/launch/: estimator_bridge.launch.py
ros2_ws/src/core/go2_msgs/: package.xml
ros2_ws/src/core/go2_msgs/msg/: ArmAngles.msg  LocomotionCmd.msg  LoopStatus.msg  PushEvent.msg  QDq.msg
ros2_ws/src/core/go2_odometry/: CMakeLists.txt  package.xml
ros2_ws/src/core/go2_odometry/launch/: go2_state_publisher.launch.py
ros2_ws/src/core/go2_odometry/src/: go2_state_converter_node.cpp
ros2_ws/src/core/intent_estimator/: package.xml  setup.cfg  setup.py
ros2_ws/src/core/intent_estimator/config/models/: README.md
ros2_ws/src/core/intent_estimator/config/models/012/exported/: direction_classifier_012.onnx.data
ros2_ws/src/core/intent_estimator/config/models/034/params/: direction_classifier_034.deploy.yaml
ros2_ws/src/core/intent_estimator/intent_estimator/: forward_backward_intent_cmd_publisher.py  forward_backward_intent_estimator.py  intent_cmd_override.py  left_right_intent_estimator.py  model_runtime.py
ros2_ws/src/core/intent_estimator/test/: test_intent_cmd_override.py
ros2_ws/src/core/locomotion_controller/: package.xml  setup.cfg
ros2_ws/src/core/locomotion_controller/launch/: autonomy.launch.py  control_stack.launch.py  dashboard.launch.py
ros2_ws/src/core/locomotion_controller/locomotion_controller/: policy_controller.py  wireless_cmd_bridge.py
ros2_ws/src/d1_550_description/: CMakeLists.txt  package.xml
ros2_ws/src/descriptions/d1_description/: CMakeLists.txt  package.xml
ros2_ws/src/descriptions/go2_d1_integration/: CMakeLists.txt  package.xml
ros2_ws/src/descriptions/go2_d1_integration/urdf/: d1_prefixed.xacro  go2_d1_combined.xacro
ros2_ws/src/direction_intent_estimator/: package.xml  setup.cfg  setup.py
ros2_ws/src/direction_intent_estimator/config/models/: README.md
ros2_ws/src/direction_intent_estimator/config/models/012/exported/: direction_classifier_012.onnx  direction_classifier_012.onnx.data  policy.onnx  policy.onnx.data
ros2_ws/src/direction_intent_estimator/config/models/012/params/: deploy.yaml  direction_classifier_012.deploy.yaml
ros2_ws/src/direction_intent_estimator/config/models/034/exported/: direction_classifier_034.onnx  direction_classifier_034.onnx.data  policy.onnx  policy.onnx.data
ros2_ws/src/direction_intent_estimator/config/models/034/params/: deploy.yaml  direction_classifier_034.deploy.yaml
ros2_ws/src/direction_intent_estimator/direction_intent_estimator/: forward_backward_intent_cmd_publisher.py  forward_backward_intent_estimator.py  left_right_intent_estimator.py  model_runtime.py
ros2_ws/src/direction_intent_estimator/test/: test_intent_cmd_override.py
ros2_ws/src/estimator_bridge/estimator_bridge/: qdq_est_bridge.py
ros2_ws/src/estimator_bridge/launch/: estimator_bridge.launch.py
ros2_ws/src/go2_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/go2_msgs/msg/: LocomotionCmd.msg  MpcForces.msg
ros2_ws/src/locomotion_controller/: package.xml  setup.py
ros2_ws/src/locomotion_controller/config/policy_dir/params/: deploy.yaml
ros2_ws/src/locomotion_controller/launch/: autonomy.launch.py  control_stack.launch.py  mujoco_robot.launch.py  teleop_joy.launch.py
ros2_ws/src/locomotion_controller/locomotion_controller/: policy_controller.py  qdq_plotter.py  standup_init.py  wireless_cmd_bridge.py
ros2_ws/src/mujoco_robot/: CMakeLists.txt  package.xml
ros2_ws/src/mujoco_robot/src/: mujoco_robot_node.cpp
ros2_ws/src/telemetry_dashboard/: package.xml
ros2_ws/src/telemetry_dashboard/telemetry_dashboard/: app.py  launch_process_manager.py  runner.py
ros2_ws/src/tools/telemetry_dashboard/: package.xml  setup.cfg  setup.py
ros2_ws/src/tools/telemetry_dashboard/telemetry_dashboard/: app.py  launch_process_manager.py
ros2_ws/src/unitree_arm/: CMakeLists.txt  package.xml
ros2_ws/src/unitree_arm/msg/: PubServoInfo.msg  SetServoDumping.msg
ros2_ws/src/xbox_controller_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/xbox_controller_bridge/xbox_controller_bridge/: joy_locomotion_bridge.py
