<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chanwaichong0352@gmail.com">elijah</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>unitree_go</depend>
  <depend>go2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>